--- a/my-icdm.bib
+++ b/my-icdm.bib
@@ -1,7 +1,8 @@
 @inproceedings{henderson2010metric,
   title={Metric forensics: a multi-level approach for mining volatile graphs},
   author={Henderson, Keith and Eliassi-Rad, Tina and Faloutsos, Christos and Akoglu, Leman and Li, Lei and Maruhashi, Koji and Prakash, B Aditya and Tong, Hanghang},
-  booktitle={Proceedings of the 16th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  ignore_booktitle={Proceedings of the 16th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  booktitle={Proc. KDD'10},
   pages={163--172},
   year={2010},
   organization={ACM}
@@ -9,7 +10,8 @@
 @inproceedings{noble2003graph,
   title={Graph-based anomaly detection},
   author={Noble, Caleb C and Cook, Diane J},
-  booktitle={Proceedings of the ninth ACM SIGKDD international conference on Knowledge discovery and data mining},
+  ignore_booktitle={Proceedings of the ninth ACM SIGKDD international conference on Knowledge discovery and data mining},
+  booktitle={Proc. KDD'03},
   pages={631--636},
   year={2003},
   organization={ACM}
@@ -37,7 +39,7 @@
   number={3},
   pages={626--688},
   year={2015},
-  publisher={Springer}
+  ignore_publisher={Springer}
 }
 @article{yu2015glad,
   title={Glad: group anomaly detection in social media analysis},
@@ -47,14 +49,14 @@
   number={2},
   pages={18},
   year={2015},
-  publisher={ACM}
+  ignore_publisher={ACM}
 }
 @article{shuman2015vertex,
   title={Vertex-frequency analysis on graphs},
   author={Shuman, David I and Ricaud, Benjamin and Vandergheynst, Pierre},
   journal={Applied and Computational Harmonic Analysis},
   year={2015},
-  publisher={Elsevier}
+  ignore_publisher={Elsevier}
 }
 @book{daubechies1992ten,
   title={Ten lectures on wavelets},
@@ -360,7 +362,7 @@
   number={5},
   pages={393--hyhen},
   year={1982},
-  publisher={LWW}
+  ignore_publisher={LWW}
 }
 @article{gaudine2001effects,
   title={Effects of an absenteeism feedback intervention on employee absence behavior†},
@@ -370,7 +372,7 @@
   number={1},
   pages={15--29},
   year={2001},
-  publisher={Wiley Online Library}
+  ignore_publisher={Wiley Online Library}
 }
 @article{calderara2011detecting,
   title={Detecting anomalies in people’s trajectories using spectral graph analysis},
@@ -380,7 +382,7 @@
   number={8},
   pages={1099--1111},
   year={2011},
-  publisher={Elsevier}
+  ignore_publisher={Elsevier}
 }
 @inproceedings{cho2011friendship,
   title={Friendship and mobility: user movement in location-based social networks},
@@ -398,7 +400,7 @@
   number={6},
   pages={1481--1496},
   year={1997},
-  publisher={Taylor \& Francis}
+  ignore_publisher={Taylor \& Francis}
 }
 @article{chen2008detecting,
   title={On detecting spatial outliers},
@@ -408,7 +410,7 @@
   number={4},
   pages={455--475},
   year={2008},
-  publisher={Springer}
+  ignore_publisher={Springer}
 }
 @article{zhao2014unsupervised,
   title={Unsupervised Spatial Event Detection in Targeted Domains with Applications to Civil Unrest Modeling},
@@ -418,7 +420,7 @@
   number={10},
   pages={e110206},
   year={2014},
-  publisher={Public Library of Science}
+  ignore_publisher={Public Library of Science}
 }
 @inproceedings{chen2014non,
   title={Non-parametric scan statistics for event detection and forecasting in heterogeneous social media graphs},
@@ -444,8 +446,12 @@
   organization={ACM}
 }
 @article{tremblay2014graph,
-  title={Graph Wavelets for Multiscale Community Mining},
+  title={Graph wavelets for multiscale community mining},
   author={Tremblay, Nicolas and Borgnat, Pierre},
+  journal={Signal Processing, IEEE Transactions on},
+  volume={62},
+  number={20},
+  pages={5227--5239},
   year={2014},
-  publisher={IEEE}
+  ignore_publisher={IEEE}
 }
